fix: Cursor overflow problem fixed in Monaco editor

--- a/examples/nextjs-yjs-monaco/src/components/CollaborativeEditor.module.css
+++ b/examples/nextjs-yjs-monaco/src/components/CollaborativeEditor.module.css
@@ -19,5 +19,4 @@
 .editorContainer {
   position: relative;
   flex-grow: 1;
-  padding-top: 1rem;
 }
